force-app/main/default/objects/C360_NotificationEmail__mdt.object
<CustomObject>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SalesOrganization__c</fullName>
        <label>Sales Organization</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1100</fullName>
                    <default>true</default>
                    <label>1100</label>
                </value>
                <value>
                    <fullName>1300</fullName>
                </value>
                <value>
                    <fullName>1400</fullName>
                </value>
                <value>
                    <fullName>1700</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Finance</fullName>
                    <default>true</default>
                    <label>Finance</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>C360 Notification Email</label>
</CustomObject>